@@ -354,7 +354,7 @@ public class PagedViewsTest {
 		TestInputView inView = new TestInputView(outView.segments);
 
 		for (SerializationTestType reference : elements) {
-			SerializationTestType result = reference.getClass().newInstance();
+			SerializationTestType result = reference.getClass().getDeclaredConstructor().newInstance();
 			result.read(inView);
 			assertEquals(reference, result);
 		}
